crates/solidity/testing/snapshots/bindings_output/mappings/named_parameters/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected EqualGreaterThan or PayableKeyword.
   ╭─[input.sol:2:19]
   │
 2 │   mapping(address name => uint256) public myMap;
   │                   ───────┬───────  
   │                          ╰───────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract NamedMapping {
   │          ──────┬─────  
   │                ╰─────── name: 1
 2 │   mapping(address name => uint256) public myMap;
   │                                           ──┬──  
   │                                             ╰──── name: 2
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─▶ contract NamedMapping {
 2 │ │     mapping(address name => uint256) public myMap;
   │ │   ────────────────────────┬────────────────────────  
   │ │                           ╰────────────────────────── definiens: 2
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
───╯
